<resources>
    <string name="app_name">Top Developers</string>
    <string name="img_description">Profile Picture</string>
    <string name="img_organization">Organization image</string>
    <string name="profile_name">Profile</string>
    <string name="txtProfile">Developer Profile</string>
    <string name="txtFollowers">Followers</string>
    <string name="txtFollowing">Following</string>
    <string name="txtRepos">Repositories</string>
    <string name="txtGists">Gists</string>
    <string name="txtBio">Bio</string>
    <string name="feedback">Give feedback</string>
    <string name="call">Call Us</string>
    <string name="email">Email Us</string>
    <string name="donate">Donate</string>
    <string name="share">Share profile</string>
    <string name="phone_number">+254700456439</string>
    <string name="email_address">pmutondo12@gmail.com</string>
    <string name="email_chooser">Send With</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again!</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">OK</string>
    <string name="click_search_icon_on_your_keyboard">Click search icon on your keyboard</string>
    <string name="exit">Exit</string>
    <string name="no_record_found">No record found</string>
    <string name="user_has_no_organization">Company Missing</string>
    <string name="user_has_no_bio">Bio Missing</string>
    <string name="joined_on">Joined on %s</string>
    <string name="server_error">Server error, please try again later</string>
    <string name="not_found_try_again">Record not found, please try again</string>
    <string name="erro_while_loading">An error occurred when loading users</string>
</resources>
