<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/user_details">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_color"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/txtProfile"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_centerHorizontal="true"
                android:textColor="@color/toolbar_text_color"
                android:textStyle="bold"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/img_description"
                android:layout_below="@id/profile_name"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/toolbar_text_color"
                android:layout_below="@id/userProfile"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/userCreate_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/userName"
                android:paddingBottom="36dp"
                android:textColor="@color/toolbar_text_color"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_rect"
            android:elevation="4dp"
            android:padding="4dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/imgOrganization"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/img_org"
                    android:contentDescription="@string/img_description"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/userOrgs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/imgOrganization"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/userFollowers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <TextView
                    android:id="@+id/userFollowing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <TextView
                    android:id="@+id/userRepositories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <TextView
                    android:id="@+id/userGists"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceMedium"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFollowers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtFollowers"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:id="@+id/txtFollowing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtFollowing"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:id="@+id/txtRepositories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtRepos"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:id="@+id/txtGists"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtGists"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/txtBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBio"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/username_color"
                android:textAppearance="?android:textAppearanceLarge"/>

            <TextView
                android:id="@+id/userBioInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_below="@id/txtBio"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>